# donatverse

./: README.md  package-lock.json  package.json
anchor/donatverse/: Anchor.toml  Dockerfile  Dockerfile.solana  docker-compose.yml
anchor/donatverse/app/: page.tsx
anchor/donatverse/app/components/: DonationForm.tsx
anchor/donatverse/app/providers/: WalletProvider.tsx
anchor/donatverse/programs/donatverse/: Cargo.toml
anchor/donatverse/programs/donatverse/src/: lib.rs
anchor/donatverse/test/: anchor.test.js  anchor.test.ts  idl.json  wallet-keypair.json
src/app/: Home.module.css  globals.css  layout.tsx  page.tsx
src/app/dashboard/: dashboard.module.css  page.tsx
src/app/donate/: DonatePage.module.css  page.tsx
src/app/popular/: page.module.css  page.tsx
src/components/: WalletConnection.module.css  WalletConnection.tsx
src/components/Analytics/: Analytics.module.css  Analytics.tsx
src/components/DonationsList/: DonationsList.module.css  DonationsList.tsx
src/components/GetLinkButton/: GetLinkButton.module.css  GetLinkButton.tsx
src/components/SidebarNav/: SidebarNav.module.css  SidebarNav.tsx
src/context/: WalletContext.tsx
src/idl/: idl.json
src/scripts/: usdt.ts
